# sdk-python

./: .gitignore  README.md  pyproject.toml
src/monstergaming/: __init__.py  client.py
